# prozess-uebertrag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: builder-rules-reminder.sh
.github/workflows/: test.yml
app/: auth.py  completeness.py  config.py  db.py  industries.py  main.py  metrics.py  models.py  ratelimit.py  storage.py
app/excel/: builder.py  formulas.py  kennzahlen.py  structure.py
app/routes/: download.py  job.py  pages.py  upload.py
app/templates/: base.html  job.html  jobs_list.html  login.html  upload.html
app/worker/: claude_client.py  consolidate.py  pdf_detect.py  prompts.py  tasks.py  verify.py
docs/exploration/: htmx-demo.html
docs/plans/: 2026-04-23-implementation-plan.md
docs/runbooks/: 2026-06-10-supabase-key-rotation.md  2026-06-11-hetzner-authentik-cutover.md
docs/specs/: 2026-04-23-prozess-uebertrag-design.md
prozess_uebertrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_auth.py  test_auth_authentik.py  test_claude_client.py  test_companies.py  test_config.py  test_consolidate.py  test_end_to_end_robustness.py  test_excel_builder.py  test_excel_formulas.py  test_excel_kennzahlen.py  test_excel_structure.py  test_industries.py  test_job_flow.py  test_job_routes.py  test_line_items.py  test_metrics.py  test_models.py  test_pdf_detect.py  test_prompts.py  test_ratelimit.py  test_storage.py  test_upload_safe_filename.py  test_upload_security.py  test_verify.py  test_worker_tasks.py
tests/fixtures/: README.md  (+2 more)
(+12 files in other folders)
